# Quantitative-Portfolio-Platform

./: .cursorrules  .gitignore  CLAUDE.md  README.md  requirements.txt  tasks.md
.github/: SETUP.md
.github/workflows/: ci-cd.yml
api/: .dockerignore  Dockerfile  api_utils.py  app.py  logging_config.py  main.py  models.py  monte_carlo.py  portfolio.py  pytest.ini  requirements.txt  utils.py  visualization.py
api/tests/: test_api.py  test_monte_carlo.py
backend/: .dockerignore  Dockerfile  app.py  pyproject.toml
backend/core/: logging_config.py  utils.py
backend/core/api/: api_utils.py  models.py  routes.py
backend/optimization/: demo.py  main.py
backend/optimization/api/: api_utils.py  models.py  routes.py  utils.py
backend/optimization/engine/: markowitz.py
backend/optimization/tests/: test_api.py  test_markowitz.py
backend/simulation/: demo.py  main.py
backend/simulation/api/: api_utils.py  models.py  routes.py  utils.py
backend/simulation/engine/: monte_carlo.py  portfolio.py  utils.py  visualization.py
backend/simulation/tests/: test_api.py  test_monte_carlo.py
docs/: architecture.mermaid
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: CarouselIndicator.tsx  (+18 more)
src/: main.py  monte_carlo.py  portfolio.py  utils.py  visualization.py
tasks/: backend-tasks.md  frontend-tasks.md  optimization-backend.md  optimization-frontend.md  simulation-backend.md  simulation-frontend.md
(+21 files in other folders)
