[tool.poetry]
name = "monte-carlo-backend"
version = "0.1.0"
description = "Monte Carlo portfolio simulation backend"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.3.2"
pandas = "^2.3.1"
matplotlib = "^3.10.5"
yfinance = "^0.2.65"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
seaborn = "^0.13.2"
google-cloud-logging = "^3.12.1"
cvxpy = "^1.7.1"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
pytest-asyncio = "^1.1.0"
pytest-httpx = "^0.35.0"
pytest-mock = "^3.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"